fix overlapping on react tab

--- a/views/portfolio/portfolio.scss
+++ b/views/portfolio/portfolio.scss
@@ -21,32 +21,12 @@
     max-width: 1500px;
     margin: 0 auto;
     text-align: center;
+    margin-bottom: 100px;
 
     .squares{
         height: 300px;
         padding: 15px;
         padding-top: 70px;
-
-        &:last-of-type{
-            margin-bottom: 100px;
-        }
-
-        // @include desktop{
-        //     &:nth-child(3n + 1){
-        //         .project-card{
-        //             margin-right: 0;
-
-        //         }
-        //     }
-
-        //     &:nth-child(3n + 3){
-        //         .project-card{
-        //             margin-left: 0;
-        //         }
-        //     }
-
-        // }
-
 
         .project-card{
             height: 100%;
